# django-salesman-stripe

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: codeql-analysis.yml  test.yml
example/: README.md
example/project/: settings.py  urls.py
example/shop/: admin.py  models.py  serializers.py
example/shop/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_stripe_customer_id.py
salesman_stripe/: __init__.py  conf.py  models.py  payment.py
salesman_stripe/templates/salesman_stripe/: cancel.html  success.html
